Faltaba PATCH en CORS.